# sleep

./: .gitignore  CLAUDE.md  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
notebooks/: avg_time_series.ipynb  data_for_Ziyun_v1.ipynb  dual_layer_data.ipynb  length_of_sleep_sessions.ipynb  significant_cells.ipynb  sleep_02.ipynb  suite2p_class_prototyper.ipynb
notebooks/attractor/: DCA_analysis.ipynb  DCA_analysis2.ipynb  Plot_results_attractor_datasets.ipynb  Single_session_DCA_analysis_intervals.ipynb  attractor_datasets.ipynb
notebooks/behavior/: behavior_mobility_immobility.ipynb  behavior_report.ipynb  process_velocity.ipynb
notebooks/clustering/: Cosine_dist_calc_single_set.ipynb  clustering_plot.ipynb  tsclustering3.ipynb
notebooks/cort_analysis/: amplitude_analysis.ipynb  metadata.py  readme.md
notebooks/data_export/: fluorescence_export.ipynb
notebooks/database_prototypes/: behavior_imaging_pairing.ipynb
notebooks/dendritic_analysis/: psd_analysis_all_sessions.ipynb  rastermap_single_session copy.ipynb  rastermap_single_session.ipynb  rastermap_single_session_R01.ipynb  spike_rate_analysis.ipynb
notebooks/dual_plane_analysis/: correlation_analysis.ipynb
notebooks/event detection/: Event_Detection_Demo.ipynb
notebooks/ff_analysis/: ff_analysis_dend_power_spectra.ipynb  ff_analysis_soma.ipynb  ff_analysis_somatic_power_spectra.ipynb  ff_group_analyses.ipynb
scripts/: add_project_subfolders.py  add_time_avg.py
src/: config.py  config_local.py.example  logging_setup.py
src/classes/: dfof.py  (+1 more)
tests/: test_unit.py
(+48 files in other folders)
